production/appointment_service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointment-service
  namespace: production
spec:
  replicas: 1  
  selector:
    matchLabels:
      app: appointment-service
  template:
    metadata:
      labels:
        app: appointment-service
    spec:
      imagePullSecrets:
      - name: aws-ecr-cred
      containers:
      - name: appointment-service
        image: 024955634588.dkr.ecr.us-east-1.amazonaws.com/appointment_service:6b87943b-20251218043659
        ports:
        - containerPort: 8004
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
