production/appointment_service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appointment-service
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: appointment-service
  ports:
  - port: 80
    targetPort: 8004
